<resources>
    <string name="app_name">A1_RamarosonAllan</string>
    <string name="AC">AC</string>
    <string name="PlusMinus">+/-</string>
    <string name="PercentSign">%</string>
    <string name="Divide">\u00f7</string>
    <string name="Seven">7</string>
    <string name="Eight">8</string>
    <string name="Nine">9</string>
    <string name="Multiply">\u00d7</string>
    <string name="Four">4</string>
    <string name="Five">5</string>
    <string name="Six">6</string>
    <string name="Minus">\u2212</string>
    <string name="One">1</string>
    <string name="Two">2</string>
    <string name="Three">3</string>
    <string name="Plus">\u002b</string>
    <string name="Zero">0</string>
    <string name="Decimal">.</string>
    <string name="Equal">=</string>
</resources>